--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
         "name": "(gdb) Launch",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",
+        "program": "${fileDirname}/${fileBasenameNoExtension}", // Modified for Linux
         "args": [],
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}",
         "environment": [],
         "externalConsole": false,
         "MIMode": "gdb",
-        "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe", // Or your GDB path
+        "miDebuggerPath": "gdb", // Modified for Linux (or "/usr/bin/gdb")
         "setupCommands": [
           {
             "description": "Enable pretty-printing for gdb",
