--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,26 +4,29 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "C:/msys64/mingw64/bin/gcc.exe",
+            "command": "g++",
             "args": [
-                "-O0",
-                "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}/${fileBasenameNoExtension}",
+                "-g"
             ],
-            "group": "build"
+            "group": "build",
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "detail": "Generated task for C++ compilation"
         },
         {
             "type": "cppbuild",
-            "label": "C/C++: gcc.exe build active file",
-            "command": "C:\\msys64\\mingw64\\bin\\gcc.exe",
+            "label": "C/C++: g++-13 build active file",
+            "command": "/usr/bin/g++-13",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\${fileBasenameNoExtension}.exe"
+                "${fileDirname}/${fileBasenameNoExtension}"
             ],
             "options": {
                 "cwd": "${fileDirname}"
